--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+	
+	 <dependency>
+	 	<groupId>pl.pragmatists</groupId>
+	 	<artifactId>JUnitParams</artifactId>
+	 	<version>1.0.5</version>
+	 </dependency>
+
   </dependencies>
 
   <build>
@@ -43,7 +50,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.20.1</version>
+          <version>2.19.1</version>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
